--- a/app/src/main/res/layout/dzielniki_liczb.xml
+++ b/app/src/main/res/layout/dzielniki_liczb.xml
@@ -24,9 +24,12 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
+        android:background="@android:color/holo_green_dark"
         android:ems="10"
         android:inputType="number"
         android:textColorLink="#2196F3"
+        android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/buttondzielnikisprawc"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
